# simple-frp

./: .ghci  .gitignore  .stylish-haskell.yaml  LICENSE.txt  README.md  bench.ps1  develop.ps1  notes.md  simple-frp-test.prof  simple-frp.cabal
app/: Main.hs
src/: FRP.hs  Utils.hs
src/FRP/: AST.hs  Parser.hs  Pretty.hs  Semantics.hs  TypeChecker.hs  TypeInference.hs
src/FRP/AST/: Construct.hs  QuasiQuoter.hs  Reflect.hs
src/FRP/Parser/: Construct.hs  Decl.hs  Lang.hs  Program.hs  Term.hs  Type.hs
test/FRP/: Generators.hs  NumberAddition.hs  ParserSpec.hs  SemanticsSpec.hs  TestFunctions.hs  TestPrograms.hs  TypeCheckerSpec.hs  TypeInferenceSpec.hs
