name:                simple-frp
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/simple-frp#readme
license:             BSD3
license-file:        LICENSE.txt
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FRP, FRP.AST, FRP.Pretty, FRP.Semantics, FRP.Parser, Utils
  build-depends:       base >= 4.7 && < 5, pretty, containers, mtl, parsec
  ghc-options:         -Wincomplete-patterns
  default-language:    Haskell2010
  default-extensions:  LambdaCase, OverloadedStrings

executable simple-frp-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , simple-frp
                     , mtl
  default-language:    Haskell2010
  default-extensions:  LambdaCase, OverloadedStrings

test-suite simple-frp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , simple-frp, hspec, mtl, containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                       -fprof-auto -fprof-cafs
  default-language:    Haskell2010
  default-extensions:  LambdaCase, OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/githubuser/simple-frp
