name:                simple-frp
version:             0.1.0.0
synopsis:            FRP programming with guarded recursion and no (extra) memory leaks
description:         Please see README.md
homepage:            https://github.com/githubuser/simple-frp#readme
license:             BSD3
license-file:        LICENSE.txt
author:              Adam Schønemann
maintainer:          adamschoenemann@gmail.com
copyright:           2016 Adam Schønemann
category:            Languages
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FRP, FRP.AST, FRP.Pretty, FRP.Semantics, FRP.Parser.Lang
                     , FRP.Parser.Term, FRP.Parser.Program, FRP.Parser.Type
                     , FRP.Parser.Decl, FRP.AST.Construct, Utils
                     , FRP.Parser.Construct, FRP.TypeInference, FRP.AST.QuasiQuoter
                     , FRP.AST.Reflect
  other-modules:       FRP.TypeChecker
  build-depends:       base >= 4.7 && < 5, pretty, containers, mtl, parsec
                     , neat-interpolation, template-haskell, text, QuickCheck
                     , io-streams
  ghc-options:         -Wincomplete-patterns
  default-language:    Haskell2010
  default-extensions:  LambdaCase, OverloadedStrings

test-suite simple-frp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       FRP.SemanticsSpec, FRP.ParserSpec, FRP.TestFunctions
                     , FRP.Generators, FRP.TypeInferenceSpec
                     , FRP.TypeCheckerSpec, FRP.NumberAddition
  build-depends:       base , simple-frp, hspec, mtl, containers, parsec
                     , neat-interpolation, template-haskell, text, QuickCheck
                     , io-streams
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                       -fprof-auto -fprof-cafs
  default-language:    Haskell2010
  default-extensions:  LambdaCase, OverloadedStrings

executable frp-profile
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base, simple-frp
  ghc-options:         -threaded -rtsopts
                       --auto-all -prof -caf-all
                       -fprof-auto -fprof-cafs
                       "-with-rtsopts=-N -p -s"
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adamschoenemann/simple-frp
